<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/tint_app_background"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:toolbarId="@+id/toolbar">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/primaryColor"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:gravity="center"
                    android:background="@color/primaryColor">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/search_activity"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/RatingBar"
                        android:textColorHint="@android:color/white"
                        android:visibility="visible" />
                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:hint="@string/search_for_movie"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textColorHint="@color/primaryTextColor"
                android:visibility="visible"
                app:queryBackground="@drawable/tint_app_background"
                app:queryHint="search your movie here"
                android:layout_marginBottom="5dp" />
            <RadioGroup
                android:id="@+id/radioGroupSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radioBtnMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textColor="@color/primaryTextColor"
                    android:text="@string/type_movie" />
                <RadioButton
                    android:id="@+id/radioBtnEpisode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_episode"
                    android:textColor="@color/primaryTextColor"
                    android:layout_marginStart="@dimen/size_16"/>
                <RadioButton
                    android:id="@+id/radioBtnSerise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_serise"
                    android:textColor="@color/primaryTextColor"
                    android:layout_marginStart="@dimen/size_16"/>
            </RadioGroup>
          </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="@dimen/size_3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/emptyList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="186dp"
                android:text="@string/no_results"
                android:visibility="gone"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/text_size_25"
                android:textStyle="bold"
                android:layout_margin="@dimen/size_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:text="retry"
                android:visibility="gone"
                android:textSize="32sp"
                android:background="@drawable/tint_app_background"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintEnd_toEndOf="@+id/emptyList"
                app:layout_constraintStart_toStartOf="@+id/emptyList"
                app:layout_constraintTop_toBottomOf="@+id/emptyList" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:visibility="gone">

        <com.crimson.assignment.ui.HorizontalDottedProgress
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/error_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/erroricon" />

        <TextView
            android:id="@+id/no_connection_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_image"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="16dp"
            android:text="Unfortunately there was no match product"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primaryColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/please_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/no_connection_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="Please try again"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primaryColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/please_try_again"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="Please try again"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/holo_blue_light" />
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>